# Aerodynamics

./: .gitignore  ARD.cpp  CMakeLists.txt  CMakePresets.json  HeadNormal.txt  V_Smetana_-_AGD_-_Kursovaya_rabota.docx  aero_file_0.csv  aero_file_1.csv  aero_file_2.csv  aero_file_3.csv  aero_file_4.csv  atmosphere.cpp  atmosphere.h  coef.xlsx  common.h  drag_force.cpp  drag_force.h  friction.cpp  friction.h  geometry.cpp  geometry.h  inductance.cpp  inductance.h  input.py  lift_force.cpp  lift_force.h  main.cpp  pressure.cpp  pressure.h  res.py  run.py  union_stream.cpp  union_stream.h
CX/: drag_force.cpp  drag_force.h  friction.cpp  friction.h  pressure.cpp  pressure.h
CY/: lift_force.cpp  lift_force.h
resources/: BottomPressure.txt  HeadPressure.txt  TriangleNormal.txt  TrianglePressure.txt  V_Smetana_-_AGD_-_Kursovaya_rabota.docx  coef.xlsx  ~$Smetana_-_AGD_-_Kursovaya_rabota.docx
